<resources>
    <string name="app_name">DataBase</string>
    <string name="welcome">Click Here</string>
    <string name="intro">Welcome to Your Health Care App. Click on the Button to see your data</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_display">Display</string>
    <string name="name">First Name</string>
    <string name="surname">Last Name</string>
    <string name="hint_name">Insert First Name Here</string>
    <string name="hint_surname">Insert Last Name Here</string>
    <string name="department">Department</string>
    <string name="add_patient">Add Patient</string>

    <string-array name="departments">
        <item>Toxicology</item>
        <item>Infectology</item>
        <item>Neuro</item>
    </string-array>


</resources>